<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/custom_background">
    <item
        android:id="@+id/action_home"
        android:icon="@mipmap/homepage"
        android:orderInCategory="100"
        android:title="@string/title_home"

        />

    <item
        android:id="@+id/action_order"
        android:icon="@mipmap/order"
        android:orderInCategory="100"
        android:title="@string/title_order"

        />

    <item
        android:id="@+id/action_feedback"
        android:icon="@mipmap/chat"
        android:orderInCategory="100"
        android:title="@string/title_feedback"

        />

    <item
        android:id="@+id/action_report"
        android:icon="@mipmap/report"
        android:orderInCategory="100"
        android:title="@string/title_report"

        />

    <item
        android:id="@+id/action_user"
        android:icon="@mipmap/user"
        android:orderInCategory="100"
        android:title="@string/title_user"

        />

</menu>